--- a/curtin/jobs-vmtest-proposed.yaml
+++ b/curtin/jobs-vmtest-proposed.yaml
@@ -96,7 +96,9 @@
 
           export TMPDIR=/var/lib/jenkins/tmp/
           export CURTIN_VMTEST_CURTIN_EXE="curtin-from-container $LXC_NAME curtin"
-          export CURTIN_VMTEST_TAR_DISKS=1
+          # Helpful in debugging, but fill up Jenkins if all test fail
+          # export CURTIN_VMTEST_KEEP_DATA_FAIL=all
+          # export CURTIN_VMTEST_TAR_DISKS=1
           export CURTIN_VMTEST_SKIP_BY_DATE_BUGS="*"
 
           rm -Rf curtin-* output
