curtin: use a common parameter to control the vmtest_parallel setting
We've several locations where we invoke jenkins-runner with the
--parallel flag to set the number of vmtests we run in parallel.
Consolidate this setting in parameters.yaml and have all jobs using
jenkins-runner to use this parameter.

--- a/curtin/jobs-vmtest-daily.yaml
+++ b/curtin/jobs-vmtest-daily.yaml
@@ -20,6 +20,7 @@
     node: torkoal
     parameters:
         - nose-args
+        - vmtest-parallel
     triggers:
         - timed: "H 4 * * *"
     properties:
@@ -32,12 +33,14 @@
       - vmtest-daily:
           release: trusty
           nose_args: nose_args
+          vmtest_parallel: vmtest_parallel
 
 - job:
     name: curtin-vmtest-daily-x
     node: torkoal
     parameters:
         - nose-args
+        - vmtest-parallel
     triggers:
         - timed: "H 8 * * *"
     properties:
@@ -50,6 +53,7 @@
       - vmtest-daily:
           release: xenial
           nose_args: nose_args
+          vmtest_parallel: vmtest_parallel
 
 - builder:
     name: vmtest-daily
@@ -72,7 +76,7 @@
           ./tools/curtainer --"$TYPE" ubuntu-daily:"$RELEASE" --source=src "$LXC_NAME"
           cd src
           set +e
-          ./tools/jenkins-runner -p 2 ${nose_args}
+          ./tools/jenkins-runner -p${vmtest_parallel} ${nose_args}
           RET=$?
 
           cd $WORKSPACE
