--- a/curtin/jobs-ci.yaml
+++ b/curtin/jobs-ci.yaml
@@ -53,6 +53,7 @@
         - merge-proposal
         - landing-candidate-branch
         - use-description-for-commit
+        - vmtest-parallel
     project-type: matrix
     axes:
       - axis:
@@ -103,7 +104,7 @@
             no_proxy=launchpad.net https_proxy="http://squid.internal:3128" tox
 
             if [ "$(arch)" == "x86_64" ]; then
-                ./tools/jenkins-runner -p 4 tests/vmtests/test_basic.py:XenialGATestBasic tests/vmtests/test_basic.py:BionicTestBasic
+                ./tools/jenkins-runner -p${vmtest_parallel} tests/vmtests/test_basic.py:XenialGATestBasic tests/vmtests/test_basic.py:BionicTestBasic
             fi
 
 - job:
@@ -122,6 +123,7 @@
       - string:
           name: merge_proposal
           description: Merge proposal URL
+      - vmtest-parallel
     auth-token: BUILD_ME
     publishers:
       - trigger-parameterized-builds:
@@ -157,5 +159,5 @@
           no_proxy=launchpad.net https_proxy="http://squid.internal:3128" tox
 
           if [ "$(arch)" == "x86_64" ]; then
-              ./tools/jenkins-runner -p 4 tests/vmtests/test_basic.py:XenialGATestBasic tests/vmtests/test_basic.py:BionicTestBasic
+              ./tools/jenkins-runner -p${vmtest_parallel} tests/vmtests/test_basic.py:XenialGATestBasic tests/vmtests/test_basic.py:BionicTestBasic
           fi
