--- a/curtin/jobs-vmtest.yaml
+++ b/curtin/jobs-vmtest.yaml
@@ -118,6 +118,7 @@
         - landing-candidate
         - landing-candidate-branch
         - nose-args
+        - vmtest-parallel
         - string:
             name: vmtest_add_repos
             default: "proposed"
@@ -167,7 +168,7 @@
 
             ./tools/vmtest-system-setup
             set +e
-            ./tools/jenkins-runner -p4 $filter_args ${nose_args}
+            ./tools/jenkins-runner -p${vmtest_parallel} $filter_args ${nose_args}
             RET=$?
 
             cd ${WORKSPACE}
