--- a/curtin/parameters.yaml
+++ b/curtin/parameters.yaml
@@ -91,3 +91,11 @@
             name: vmtest_add_repos
             default: ""
             description: value for CURTIN_VMTEST_ADD_REPOS
+
+- parameter:
+    name: vmtest-parallel
+    parameters:
+        - string:
+            name: vmtest_parallel
+            default: "2"
+            description: value for CURTIN_VMTEST_PARALLEL
