--- a/metrics/metrics.yaml
+++ b/metrics/metrics.yaml
@@ -80,7 +80,7 @@
           #!/bin/bash
           set -e
 
-          retry() (for i in {{0..4}}; do sleep $((8*i**3)) && {{echo "${@:1}"; "${@:1}";}} && break; done)
+          retry() (for i in {0..4}; do sleep $((8*i**3)) && {echo "${@:1}"; "${@:1}";} && break; done)
 
           rm -rf *
           retry git clone https://github.com/CanonicalLtd/metrics.git
